src/objects/Custom_Data_Sync_Target_Org__mdt.object
<CustomObject>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Id_Field__c</fullName>
        <label>External Id Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JWT__c</fullName>
        <label>JWT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Org_Description__c</fullName>
        <label>Org Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceDomain__c</fullName>
        <label>SourceDomain</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SourceJWT__c</fullName>
        <label>SourceJWT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Custom Data Sync Target Org</label>
    <pluralLabel>Custom Data Sync Target Orgs</pluralLabel>
</CustomObject>